src/janus/testing/snapshots/metri_engine__janus__testing__contract_tests__fts_search_native.snap
---
source: src/janus/testing/contract_tests.rs
assertion_line: 80
expression: native_plan
---
Ok(
    FtsSearch {
        tenant_id: "tenant_999",
        term: "bomba hidraulica",
    },
)
