src/janus/testing/snapshots/metri_engine__janus__testing__contract_tests__fts_search_plan.snap
---
source: src/janus/testing/contract_tests.rs
expression: plan
---
FtsSearch {
    term: "bomba hidraulica",
}
