src/janus/testing/snapshots/metri_engine__janus__testing__contract_tests__point_lookup_plan.snap
---
source: src/janus/testing/contract_tests.rs
expression: plan
---
PointLookup {
    entity_id: "01JTESTULID",
}
